HTML/CSS website initial version

--- a/index.html
+++ b/index.html
@@ -2,14 +2,74 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Full Stack Engineer | Carlos Chitty</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>Welcome to My Personal Website</h1>
-  <p>This is where you can find out more about me.</p>
+  <header>
+    <h1>Carlos Chitty</h1>
+    <p>Full Stack Engineer • Curious Human • Travel Enthusiast</p>
+  </header>
+
+  <nav aria-label="main navigation">
+    <a href="index.html#about">About</a>
+    <a href="experience.html#experience">Professional Experience</a>
+    <a href="index.html#projects">Personal Projects</a>
+    <a href="index.html#contact">Contact</a>
+  </nav>
+
+  <main class="container">
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I'm a full stack engineer with a passion for solving real-world problems through technology. I've worked at
+        scale with companies like Shopify, traveled the world while building software remotely, and contributed to
+        open-source communities. I'm driven by purpose, community, and continuous learning.</p>
+      <br>
+
+      <p>I aim to live intentionally and build tools that simplify and improve life. I'm passionate about education,
+        wellness, finance, community, and family. I'm currently looking for place where I can grow as an engineer and a
+        human, surrounded by people who care about making a difference.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects & Hobbies</h2>
+      <ul>
+        <li><strong><a href="https://wholesomeprep.com" target="_blank" rel="noopener noreferrer">Wholesome
+              Prep</a></strong>: Curated and balanced weekly meal plan, designed to help people eat
+          healthier and faster while keeping alive the joy of cooking.</li>
+        <li><strong><a href="https://github.com/chitty/map-life" target="_blank" rel="noopener noreferrer">Map
+              Life</a></strong>: Visualizes places you've visited using a simple CSV input and world map UI.</li>
+        <li><strong>Open Source Contributions:</strong>
+          <ul>
+            <li><a href="https://github.com/rails/rails/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
+                target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
+            <li><a
+                href="https://github.com/openfoodfoundation/openfoodnetwork/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
+                target="_blank" rel="noopener noreferrer">OpenFoodNetwork</a></li>
+            <li><a href="https://github.com/healeycodes/andoma/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
+                target="_blank" rel="noopener noreferrer">Andoma (chess engine)</a>
+            </li>
+          </ul>
+        </li>
+        <li><strong>Hobbies</strong>: Travel, language learning, hiking, investing, parenting, and cooking.</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>GitHub: <a href="https://github.com/chitty" target="_blank" rel="noopener noreferrer">github.com/chitty</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/carloschitty" target="_blank"
+          rel="noopener noreferrer">linkedin.com/in/carloschitty</a></p>
+    </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>Made with ❤️ | &copy; 2025 Carlos Chitty</p>
+  </footer>
 </body>
 
 </html>
