--- a/experience.html
+++ b/experience.html
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <img src="profile.jpeg" alt="Carlos Chitty" class="profile-img">
     <h1>Carlos Chitty</h1>
     <p>Full Stack Engineer • Curious Human • Travel Enthusiast</p>
   </header>
