--- a/hobbies.html
+++ b/hobbies.html
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <img src="profile.jpeg" alt="Carlos Chitty" class="profile-img">
     <h1>Carlos Chitty</h1>
     <p>Full Stack Engineer • Curious Human • Travel Enthusiast</p>
   </header>
@@ -35,7 +36,7 @@
         </li>
         <li>
           <h3>Fitness</h3>
-          <p>Staying active and healthy is important to me, whether it’s going to the gym or running outside.</p>
+          <p>Staying active and healthy is important to me, whether it's going to the gym or running outside.</p>
         </li>
       </ul>
       </div>
