--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
   <footer>
     <p>Made with ❤️ | &copy; 2025 Carlos Chitty</p>
   </footer>
+
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+      referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
