Keep everything in one page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Full Stack Engineer | Carlos Chitty</title>
+  <title>Carlos Chitty | Full Stack Engineer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,14 +12,14 @@
   <header>
     <img src="profile.jpeg" alt="Carlos Chitty" class="profile-img">
     <h1>Carlos Chitty</h1>
-    <p>Full Stack Engineer • Curious Human • Travel Enthusiast</p>
+    <p>Full Stack Engineer • Explorer at Heart • Always Learning</p>
   </header>
 
   <nav aria-label="main navigation">
-    <a href="index.html#about">About</a>
-    <a href="experience.html#experience">Professional Experience</a>
-    <a href="index.html#projects">Personal Projects</a>
-    <a href="index.html#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="#experience">Professional Experience</a>
+    <a href="#projects">Personal Projects</a>
+    <a href="#social">Let's Connect</a>
   </nav>
 
   <main class="container">
@@ -31,18 +31,76 @@
       <br>
 
       <p>I aim to live intentionally and build tools that simplify and improve life. I'm passionate about education,
-        wellness, finance, community, and family. I'm currently looking for place where I can grow as an engineer and a
+        wellness, fitness, financial markets, community, and family. I'm currently looking for place where I can grow as
+        an engineer and a
         human, surrounded by people who care about making a difference.</p>
     </section>
 
+    <section id="experience" aria-labelledby="experience-heading">
+      <h2>Professional Experience</h2>
+      <p>
+        It all started in middle school with BASIC, followed by building websites in high school.
+        Since then, I've reengineered fraud detection platforms, built real-time bidding systems,
+        led projects at Shopify like the Shopless Billing API refactor and Performance Tripwires,
+        and crafted full-stack solutions for clients globally.
+      </p>
+
+      <h3>
+        Software Developer at
+        <a href="https://shopify.com/" target="_blank" rel="noopener noreferrer">Shopify</a>
+      </h3>
+      <ul>
+        <li>Led API infrastructure improvements for Shopify's billing platform, enhancing scalability and enabling more
+          flexible billing flows.</li>
+        <li>Refined payment integrations (e.g. Braintree 3DS), improving transaction reliability and developer
+          experience.</li>
+        <li>Optimized internal bookkeeping systems to support accurate financial operations.</li>
+        <li>Led system upgrades, including multiple Rails upgrades, improving platform stability.</li>
+        <li>Drove performance optimizations and automation, reducing technical debt and improving operational
+          efficiency.</li>
+        <li>Strengthened developer experience by improving API design, documentation, and internal monitoring tools.
+        </li>
+      </ul>
+
+      <h3>
+        Software Developer at
+        <a href="https://spry-group.com/" target="_blank" rel="noopener noreferrer">Spry Group</a>
+      </h3>
+      <ul>
+        <li>Designed, maintained, and updated REST APIs.</li>
+        <li>Integrated web applications with REST and GraphQL APIs.</li>
+        <li>Wrote and maintained unit, integration, and end-to-end tests.</li>
+        <li>Reviewed code and managed merges collaboratively.</li>
+      </ul>
+
+      <h3>
+        Back End Developer at
+        <a href="https://darriens.com/" target="_blank" rel="noopener noreferrer">Darriens</a>
+      </h3>
+      <ul>
+        <li>Led development of Darriens Media Exchange (DMX), including RTB platform, Ad Server, and API.</li>
+        <li>Guided partners through technical integration with the new platform.</li>
+      </ul>
+
+      <h3>
+        Software Developer at PRX Control Solutions
+      </h3>
+      <ul>
+        <li>Reengineered the platform and built APIs that enabled smoother
+          integration with insurance providers to detect fraud in prescription drug claims.</li>
+      </ul>
+
+    </section>
+
     <section id="projects">
-      <h2>Projects & Hobbies</h2>
+      <h2>Personal Projects</h2>
       <ul>
         <li><strong><a href="https://wholesomeprep.com" target="_blank" rel="noopener noreferrer">Wholesome
-              Prep</a></strong>: Curated and balanced weekly meal plan, designed to help people eat
-          healthier and faster while keeping alive the joy of cooking.</li>
+              Prep</a></strong>: Weekly meal planner designed to reduce decision fatigue and support healthier eating
+          habits—focused on balance, joy, and time efficiency.</li>
         <li><strong><a href="https://github.com/chitty/map-life" target="_blank" rel="noopener noreferrer">Map
-              Life</a></strong>: Visualizes places you've visited using a simple CSV input and world map UI.</li>
+              Life</a></strong>: Visualizes places you've visited using a simple CSV input and interactive map UI—built
+          to help people reflect on and appreciate life experiences visually.</li>
         <li><strong>Open Source Contributions:</strong>
           <ul>
             <li><a href="https://github.com/rails/rails/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
@@ -55,15 +113,18 @@
             </li>
           </ul>
         </li>
-        <li><strong>Hobbies</strong>: Travel, language learning, hiking, investing, parenting, and cooking.</li>
+        <li><strong>Hobbies</strong>: Besides my passion for software development I also enjoy traveling, language
+          learning, staying active, being outdoors, mental and fisical fitness, investing, and parenting.</li>
       </ul>
     </section>
 
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>GitHub: <a href="https://github.com/chitty" target="_blank" rel="noopener noreferrer">github.com/chitty</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/carloschitty" target="_blank"
-          rel="noopener noreferrer">linkedin.com/in/carloschitty</a></p>
+    <section id="social">
+      <h2>Let's Connect</h2>
+      <a href="https://github.com/chitty" target="_blank" rel="noopener noreferrer">GitHub</a> | <a
+        href="https://linkedin.com/in/carloschitty/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a
+        href="https://stackoverflow.com/users/467435/carlos" target="_blank" rel="noopener noreferrer">Stack
+        Overflow</a> | <a href="https://x.com/carchitty/" target="_blank" rel="noopener noreferrer">X</a>
+      </ul>
     </section>
     </div>
   </main>
