Update experience section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carlos Chitty | Full Stack Engineer</title>
+  <title>Carlos Chitty Abbate | Full Stack Software Engineer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,11 +12,11 @@
   <header>
     <img src="profile.jpeg" alt="Carlos Chitty" class="profile-img">
     <h1>Carlos Chitty</h1>
-    <p>Full Stack Engineer • Explorer at Heart • Always Learning</p>
+    <p>Full Stack Software Engineer • Explorer at Heart • Always Learning</p>
   </header>
 
   <nav aria-label="main navigation">
-    <a href="#about">About</a>
+    <a href="#about">About Me</a>
     <a href="#experience">Professional Experience</a>
     <a href="#projects">Personal Projects</a>
     <a href="#social">Let's Connect</a>
@@ -25,40 +25,45 @@
   <main class="container">
     <section id="about">
       <h2>About Me</h2>
-      <p>I'm a full stack engineer with a passion for solving real-world problems through technology. I've worked at
-        scale with companies like Shopify, traveled the world while building software remotely, and contributed to
-        open-source communities. I'm driven by purpose, community, and continuous learning.</p>
+      <p>I'm a full stack Software Engineer with a passion for solving real-world problems through technology.
+        I've worked at scale with companies like Shopify,
+        traveled the world while building software remotely, and contributed to open-source communities.
+        I'm driven by purpose, community, and continuous learning.</p>
       <br>
 
       <p>I aim to live intentionally and build tools that simplify and improve life. I'm passionate about education,
         wellness, fitness, financial markets, community, and family. I'm currently looking for place where I can grow as
-        an engineer and a
-        human, surrounded by people who care about making a difference.</p>
+        an engineer and a human, surrounded by people who care about making a difference.</p>
     </section>
 
     <section id="experience" aria-labelledby="experience-heading">
       <h2>Professional Experience</h2>
-      <p>
-        It all started in middle school with BASIC, followed by building websites in high school.
-        Since then, I've reengineered fraud detection platforms, built real-time bidding systems,
-        led projects at Shopify like the Shopless Billing API refactor and Performance Tripwires,
-        and crafted full-stack solutions for clients globally.
-      </p>
-
       <h3>
         Software Developer at
         <a href="https://shopify.com/" target="_blank" rel="noopener noreferrer">Shopify</a>
       </h3>
       <ul>
-        <li>Led API infrastructure improvements for Shopify's billing platform, enhancing scalability and enabling more
-          flexible billing flows.</li>
-        <li>Refined payment integrations (e.g. Braintree 3DS), improving transaction reliability and developer
-          experience.</li>
-        <li>Optimized internal bookkeeping systems to support accurate financial operations.</li>
-        <li>Led system upgrades, including multiple Rails upgrades, improving platform stability.</li>
-        <li>Drove performance optimizations and automation, reducing technical debt and improving operational
-          efficiency.</li>
-        <li>Strengthened developer experience by improving API design, documentation, and internal monitoring tools.
+        <li>Led API infrastructure improvements for Shopify's billing platform to support account-level billing,
+          unlocking multi-store support and enabling billing for new entities.
+          Managed 2 junior engineers and drove execution with dashboards, documentation, and comprehensive test
+          coverage.
+        </li>
+        <li>Owned phased rollout of payment provider integration including 3D Secure, spanning React frontend,
+          monolithic Rails backend, billing, and other internal REST/GraphQL APIs.
+          Used feature flags to ramp from 1% to 100%, improving fraud detection and payment success rates.
+        </li>
+        <li>Reduced critical job delays by 30%, eliminated resource contention, and significantly improved system
+          reliability by establishing job prioritization, SLO-backed queues, and runtime limits.
+          This brought order and observability to 200+ background job types running millions of times daily, enabling
+          teams to proactively monitor and optimize performance.
+        </li>
+        <li>Drove multiple Rails upgrades (6.0→6.1→7.0→7.1) with minimal disruption. Reduced technical debt by removing
+          legacy code and adopting modern Rails features.
+          Improved maintainability, security, and scalability to enable smoother future upgrades.
+        </li>
+        <li>Improved issue resolution speed and platform reliability by reducing the central team's workload.
+          Defined code ownership and implemented tailored monitoring, alerts, and playbooks to enable teams to
+          proactively address issues independently.
         </li>
       </ul>
 
@@ -67,10 +72,12 @@
         <a href="https://spry-group.com/" target="_blank" rel="noopener noreferrer">Spry Group</a>
       </h3>
       <ul>
-        <li>Designed, maintained, and updated REST APIs.</li>
-        <li>Integrated web applications with REST and GraphQL APIs.</li>
-        <li>Wrote and maintained unit, integration, and end-to-end tests.</li>
-        <li>Reviewed code and managed merges collaboratively.</li>
+        <li>Boosted insurance quote speed by 3x (9s → <3s) via optimized Django APIs and backend caching for a
+            nationwide provider.</li>
+        <li>Increased quote-start completion by 17% on Hagerty's classic car insurance app by revamping mobile UX using
+          React + Storybook.</li>
+        <li>Replaced static PDFs with interactive React/D3 dashboards for World Bank, enabling dynamic exploration of
+          100+ countries' data.</li>
       </ul>
 
       <h3>
@@ -78,8 +85,10 @@
         <a href="https://darriens.com/" target="_blank" rel="noopener noreferrer">Darriens</a>
       </h3>
       <ul>
-        <li>Led development of Darriens Media Exchange (DMX), including RTB platform, Ad Server, and API.</li>
-        <li>Guided partners through technical integration with the new platform.</li>
+        <li>Led the team developing key ad server components, including the Real-Time Bidding (RTB) platform, the Ad
+          Server and Requester API allowing the company to enter new markets and stay competitive.</li>
+        <li>Provided in-house IT support for Ad Ops, client services, and traffic's departments. Making sure the
+          underlying technology allowed them to achieve their goals.</li>
       </ul>
 
       <h3>
@@ -97,24 +106,24 @@
       <ul>
         <li><strong><a href="https://wholesomeprep.com" target="_blank" rel="noopener noreferrer">Wholesome
               Prep</a></strong>: Weekly meal planner designed to reduce decision fatigue and support healthier eating
-          habits—focused on balance, joy, and time efficiency.</li>
-        <li><strong><a href="https://github.com/chitty/map-life" target="_blank" rel="noopener noreferrer">Map
-              Life</a></strong>: Visualizes places you've visited using a simple CSV input and interactive map UI—built
-          to help people reflect on and appreciate life experiences visually.</li>
+          habits with a focus on balance, joy, and time efficiency.</li>
+        <li><strong><a href="https://chitty.github.io/map-life/" target="_blank" rel="noopener noreferrer">Map
+              Life</a></strong>: Visualizes countries you've visited using a CSV input and interactive map UI—built
+          to help people reflect on and appreciate travel related life experiences visually.</li>
         <li><strong>Open Source Contributions:</strong>
           <ul>
-            <li><a href="https://github.com/rails/rails/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
-                target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
             <li><a
                 href="https://github.com/openfoodfoundation/openfoodnetwork/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
                 target="_blank" rel="noopener noreferrer">OpenFoodNetwork</a></li>
+            <li><a href="https://github.com/rails/rails/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
+                target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
             <li><a href="https://github.com/healeycodes/andoma/issues?q=state%3Amerged%20is%3Apr%20author%3Achitty"
                 target="_blank" rel="noopener noreferrer">Andoma (chess engine)</a>
             </li>
           </ul>
         </li>
         <li><strong>Hobbies</strong>: Besides my passion for software development I also enjoy traveling, language
-          learning, staying active, being outdoors, mental and fisical fitness, investing, and parenting.</li>
+          learning, staying active, being outdoors, mental and physical fitness, investing, and parenting.</li>
       </ul>
     </section>
 
