--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <img src="profile.jpeg" alt="Carlos Chitty" class="profile-img">
-    <h1>Carlos Chitty</h1>
+    <h1>Carlos Chitty Abbate</h1>
     <p>Full Stack Software Engineer • Explorer at Heart • Always Learning</p>
   </header>
 
