Refine personal statement in index.html
Reworded a paragraph for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <br>
 
       <p>I aim to live intentionally and build tools that simplify and improve life. I'm passionate about education,
-        wellness, fitness, financial markets, community, and family. I'm currently looking for place where I can grow as
-        an engineer and a human, surrounded by people who care about making a difference.</p>
+        wellness, fitness, financial markets, community, and family. I’m dedicated to growing as both an engineer and a person, alongside people who want to make a difference.</p>
     </section>
 
     <section id="experience" aria-labelledby="experience-heading">
